"Add to cart" button disappears on hover on gog.com
Categories
(Core :: Layout, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | disabled |
| firefox81 | --- | disabled |
| firefox82 | --- | fixed |
People
(Reporter: ksenia, Assigned: hiro)
References
(Blocks 1 open bug, Regression, )
Details
(Keywords: regression)
Attachments
(4 files)
This was originally reported in https://github.com/webcompat/web-bugs/issues/57125
STR:
- Open https://www.gog.com/
- In the slider hover on "Browse" or "Add to cart" button and observe the behaviour
Expected:
Button stays
Actual:
Button disappears
In addition, certain elements on the slides flicker after slider change (to reproduce click on arrows or on the slider control below)
From mozregression:
14:23.58 INFO: Last good revision: 5786eef0515a77d3fe7656c5bb1a7a5def4e0ab9
14:23.58 INFO: First bad revision: d67ac396d0f9d67c092672fcac1998edbbd07aed
14:23.58 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5786eef0515a77d3fe7656c5bb1a7a5def4e0ab9&tochange=d67ac396d0f9d67c092672fcac1998edbbd07aed```
| Reporter | ||
Comment 1•5 years ago
|
||
Hiro, would you be able too look into this?
| Assignee | ||
Comment 3•5 years ago
|
||
Looks like pretty much similar to bug 1659496, which means there is a pre-existing issue somewhere.
| Assignee | ||
Comment 4•5 years ago
|
||
This is not a regression caused by bug 1656418. It's been a long standing issue. That said, this issue should block shipping partial pre-render feature (bug 1656473).
I did mozregression with layout.animation.prerender.partial:true. The range is;
CCing Miko, I am almost 100% sure this issue is same as bug 1659496.
| Assignee | ||
Comment 5•5 years ago
|
||
Forgot CCing to Miko. :)
Comment 6•5 years ago
|
||
(In reply to Hiroyuki Ikezoe (:hiro) from comment #4)
I did mozregression with layout.animation.prerender.partial:true. The range is;
Comment 7•5 years ago
|
||
Marking as S2 (same as bug 1659496) for now, but maybe this can just be dup'd to the earlier bug?
| Assignee | ||
Comment 8•5 years ago
|
||
| Assignee | ||
Comment 9•5 years ago
|
||
| Assignee | ||
Comment 10•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 11•5 years ago
|
||
As I wrote in bug 1659227 comment 17, using visibleRect fixes this issue.
| Assignee | ||
Comment 12•5 years ago
|
||
With RDL the dirty rect might be empty if the target transformed frame is
marked as mForceDescendIntoIfVisible.
Comment 13•5 years ago
|
||
Comment 14•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•5 years ago
|
Description
•