Bug 1661316 - Use `visibleRect` for partial pre-render check instead of `dirtyRect`. r=mattwoodrow

With RDL the dirty rect might be empty if the target transformed frame is
marked as `mForceDescendIntoIfVisible`.

Differential Revision: https://phabricator.services.mozilla.com/D90497